--- a/src/assets/sass/pages/_portfolio-detail.scss
+++ b/src/assets/sass/pages/_portfolio-detail.scss
@@ -91,7 +91,6 @@
   /*PROJECT DETAILS ORDERED AND UNORDERED GRID*/
   &_images-gallery-section {
     transition: all 0.3s ease;
-    /* Añadir transición suave */
   }
 
   &_images-gallery {
@@ -125,17 +124,11 @@
 .gallery-grid {
   display: grid;
   gap: 80px;
-  // place-items: center;
-  // grid-template-columns: repeat(12, 1fr);
-  // grid-auto-rows: 80px; /* Define una altura fija para cada fila */
 
   &__item {
-    position: relative;
-    width: 300px;
-    height: 300px;
     display: flex;
     align-items: center;
-    justify-content: center;
+    flex-wrap: wrap;
   }
 
   &__item-image {
@@ -144,12 +137,32 @@
     height: 120%;
   }
 
-  &.ordered {
+  &__ordered {
     grid-template-columns: repeat(5, 1fr);
+    gap: 50px;
 
     .gallery-grid__item {
-      height: 200px !important;
-      width: 200px !important;
+      height: 220px !important;
+      width: 220px !important;
+
+      .gallery-grid__item-image {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+        transform: translateY(0) !important;
+        scale: 1 !important;
+        filter: blur(0) !important;
+      }
+    }
+  }
+
+  &__mbl {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+
+    .gallery-grid__item {
+      height: 100% !important;
+      width: 100% !important;
 
       .gallery-grid__item-image {
         object-fit: cover;
