--- a/src/pages/SuperButton.scss
+++ b/src/pages/SuperButton.scss
@@ -7,14 +7,12 @@
   border: 1px solid black;
   position: relative;
   border-radius: 100px;
-  padding: 15px 30px;
+  padding: 5px 35px;
   font-family: "gunterz", sans-serif;
-  font-size: 52px;
-  text-align: center;
+  font-size: 16px;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  display: inline-block;
 
   overflow: hidden;
   a {
